[package]
name = "chess-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
simonsev-chess = { git = "https://github.com/INDA23PlusPlus/simonsev-chess" }
chess-network-protocol = { git = "https://github.com/INDA23PlusPlus/chess-network-protocol" }
ggez = "0.9.3"
lazy_static = "1.4.0"
serde = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tokio-serde-json = "0.3.0"
tokio-serde = "0.8.0"
